<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TuViaje</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="wait_message">Por favor Espere</string>
    <string name="alert_title">Alerta</string>
    <string name="username_label">Usuario</string>
    <string name="password_label">Password</string>
    <string name="name_label">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="email_label">Email</string>
    <string name="adress_label">Direccion</string>
    <string name="cell_label">Celular</string>
    <string name="phone_number_label">Telefono</string>
    <string name="birth_date_label">Fecha de Nacimiento</string>
    <string name="title_activity_busqueda_vuelos">BusquedaVuelosActivity</string>
    <string name="ciudad_origen_label">Ciudad de Origen</string>
    <string name="ciudad_destino_label">Ciudad de Destino</string>
    <string name="fecha_label">Fecha Ida</string>
    <string name="fecha_llegada_label">Fecha Llegada</string>
    <string name="hora_llegada_label">Hora llegada</string>
    <string name="hora_salida_label">Hora Salida</string>
    <string name="title_activity_itinerary_result">ItineraryResultActivity</string>
    <string name="title_activity_flight_details">FlightDetailsActivity</string>

</resources>
